--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 SERVER_PORT=5000
-ATLAS_URI=mongodb+srv://rateRentDbUser:rateRentDbUser@raterentdbcluster-a9qry.gcp.mongodb.net/raterent?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://rateRentDbUser:rateRentDbUser@raterentdbcluster-a9qry.gcp.mongodb.net/test?retryWrites=true&w=majority
