--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "cookies": "^0.7.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
